# test_ci

./: .gitignore  pyproject.toml
.github/workflows/: ci-build.yml
mypack/: __init__.py  mymodule.py
mypack/tests/: test_mymodule.py
